--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PrediGuard AI - Predictive Cyber Defense System</title>
+    <title>PrediGuard system - Predictive Cyber Defense System</title>
     <meta name="description" content="AI-powered predictive cybersecurity intelligence system with multi-modal threat detection and attack path prediction" />
     <meta name="author" content="PrediGuard AI" />
 
